# TDSE_competition_0

./: .gitignore  LightGBM_baseline.ipynb  README.md  pyproject.toml
input/modeling-and-evaluation/: ROC_AUC.py  down_sampling.py  down_sampling_wrt_dist.py  model_training.py  optuna_hypara.py
input/modeling_and_evaluation/: ROC_AUC.py
input/preprocess/: target_encoding.py
src/: 001_EDA.ipynb  002_LightGBM_with_down_sampling.ipynb  003_LightGBM_with_optuna.ipynb  003_clustering.ipynb  005_LightGBM_with_target_encoding.ipynb  006_autogluon.ipynb  007_all_zero_with_roc_curve.ipynb  008_LightGBM_with_feature_importance.ipynb  EDA.ipynb  LightGBM_baseline.ipynb  Tree.gv
src/AutogluonModels/ag-20240622_124728/: learner.pkl
src/AutogluonModels/ag-20240622_124728/models/: trainer.pkl
src/AutogluonModels/ag-20240622_124728/utils/data/: X_val.pkl
working/: best_lgbm_model.pkl  learner.pkl  metadata.json
working/models/: trainer.pkl
working/utils/attr/KNeighborsDist/: y_pred_proba_val.pkl
working/utils/attr/KNeighborsUnif/: y_pred_proba_val.pkl
working/utils/data/: y.pkl  y_val.pkl
