[tool.poetry]
name = "tdse-competition-0"
version = "0.1.0"
description = ""
authors = ["Daku-on <113434878+Daku-on@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12" # for autogluon, python>=3.10 & python<3.12
pandas = "^2.2.2"
lightgbm = "^4.3.0"
scikit-learn = ">=1.3.0, <14.1" # for autogluon, scikit-learn>=1.3.0 & scikit-learn<14.1
numpy = "^1.26.4"
ipykernel = "^6.29.4"
optuna = "^3.6.1"
matplotlib = "^3.9.0"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.13.2"
autogluon = "^1.1.1"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
